--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-electron",
-  "version": "8.0.5",
+  "name": "electron-auto-update-test",
+  "version": "1.0.4",
   "description": "Angular 10 with Electron (Typescript + SASS + Hot Reload)",
   "homepage": "https://github.com/maximegris/angular-electron",
   "author": {
@@ -38,7 +38,7 @@
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:build": "npm run build:prod && electron-builder build",
-    "electron:windows": "npx electron-builder build --windows --publish always",
+    "release": "electron-builder build --windows --publish=always",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
     "e2e": "npm run build:prod && cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
@@ -102,6 +102,7 @@
     "node": ">=10.13.0"
   },
   "dependencies": {
+    "electron-log": "4.2.4",
     "electron-updater": "4.3.5"
   },
   "build": {
@@ -125,19 +126,21 @@
         }
       ]
     },
+    "mac": {
+      "category": "com.moritzer.autoupdate",
+      "target": [
+        "zip",
+        "dmg"
+      ]
+    },
     "nsis": {
-      "oneClick": false,
-      "perMachine": true,
-      "allowElevation": true,
-      "allowToChangeInstallationDirectory": true,
-      "runAfterFinish": false,
-      "createStartMenuShortcut": true,
-      "createDesktopShortcut": true
+      "perMachine": true
     },
     "publish": [
       {
-        "provider": "generic",
-        "url": "https://github.com/philippmoritzer/electron-auto-update-test"
+        "provider": "github",
+        "url": "https://github.com/philippmoritzer/electron-auto-update-test",
+        "token": "f9f7bb5fb6ce090cd139c900f206a4f51c8538aa"
       }
     ]
   }
